<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_width="400dp"
    android:layout_height="match_parent">

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/title"
        android:text="@string/account_failed"
        android:singleLine="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:text="@string/account_failed_expired"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@id/ok"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/skip"
        android:text="@string/action_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/ok"
        android:text="@string/dialog_positive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>