<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_game_menu"
    android:padding="20dp">

    <com.tungsten.fcllibrary.component.view.FCLSwitch
        android:id="@+id/slide_selection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slide_selection"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tungsten.fcllibrary.component.view.FCLSwitch
        android:id="@+id/swap_hands"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/swap_hands"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/slide_selection" />

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>