<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="400dp"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.tungsten.fcllibrary.component.view.FCLTextView
        android:id="@+id/title"
        android:text="@string/account_login_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintBottom_toTopOf="@+id/login">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.tungsten.fcllibrary.component.view.FCLTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account_login_refresh_microsoft_hint"
                android:textSize="13sp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/login"
        android:text="@string/account_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.tungsten.fcllibrary.component.view.FCLButton
        android:id="@+id/cancel"
        android:text="@string/dialog_negative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>